docs: fix `brew style`

--- a/docs/.rubocop.yml
+++ b/docs/.rubocop.yml
@@ -2,11 +2,12 @@ inherit_from: ../Library/.rubocop.yml
 
 AllCops:
   Exclude:
-  - Gemfile
-  - ".mdl*.rb"
-  - Rakefile
-  - "_site/**/*"
-  - Manpage.md
+    - Gemfile
+    - ".mdl*.rb"
+    - Rakefile
+    - "_site/**/*"
+    - Manpage.md
+    - "vendor/**/*"
 
 # These are included in docs deliberately to show what
 # `brew create` does and what the user should replace.
@@ -21,7 +22,7 @@ FormulaAudit/Homepage:
 
 Layout/LineLength:
   Exclude:
-  - Bottles.md # The bottle block line length is long in its full form.
+    - Bottles.md # The bottle block line length is long in its full form.
 
 # Apparently Casks are allowed to have constant definitions in blocks and we document this.
 Lint/ConstantDefinitionInBlock:
@@ -29,4 +30,8 @@ Lint/ConstantDefinitionInBlock:
 
 # A fake regexp is deliberately documented for `inreplace` in the Formula Cookbook.
 Style/RedundantRegexpArgument:
+  Enabled: false
+
+# Want to be able to display partial formulae in the docs.
+Style/TopLevelMethodDefinition:
   Enabled: false
