Fix/reenable `brew style docs`
- start running this check again
- check the `docs` basename correctly
- use a different name (to a symlink) for the docs rubocop
  configuration so that path relativity is done correctly:
  https://docs.rubocop.org/rubocop/configuration.html#path-relativity
- add more wildcards to fix docs rubocop exclusions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -60,9 +60,8 @@ jobs:
         working-directory: docs
         run: bundle exec rake lint
 
-      # TODO: reenable when possible.
-      # - name: Check code blocks conform to our Ruby style guide
-      #   run: brew style docs
+      - name: Check code blocks conform to our Ruby style guide
+        run: brew style docs
 
       - name: Generate formulae.brew.sh API samples
         if: github.repository == 'Homebrew/formulae.brew.sh'
