--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -1,42 +1,42 @@
-name: docs-build
-on:
-    pull_request:
-        branches:
-            - main
-            - master
+# name: docs-build
+# on:
+#     pull_request:
+#         branches:
+#             - main
+#             - master
 
-jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "3.11"
+# jobs:
+#     deploy:
+#         runs-on: ubuntu-latest
+#         steps:
+#             - uses: actions/checkout@v4
+#               with:
+#                   fetch-depth: 0
+#             - uses: actions/setup-python@v5
+#               with:
+#                   python-version: "3.11"
 
-            - name: Install GDAL
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install --find-links=https://girder.github.io/large_image_wheels --no-cache GDAL pyproj
-            - name: Test GDAL installation
-              run: |
-                  python -c "from osgeo import gdal"
-                  gdalinfo --version
-            - name: Install dependencies
-              run: |
-                  pip install --no-cache-dir Cython
-                  pip install -r requirements.txt -r requirements_dev.txt
-                  pip install .
-            - name: Discover typos with codespell
-              run: codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,*.pdf,./.git" --ignore-words-list="aci,acount,hist"
-            - name: PKG-TEST
-              run: |
-                  python -m unittest discover tests/
-            - name: Build docs
-              run: |
-                  mkdocs build
+#             - name: Install GDAL
+#               run: |
+#                   python -m pip install --upgrade pip
+#                   pip install --find-links=https://girder.github.io/large_image_wheels --no-cache GDAL pyproj
+#             - name: Test GDAL installation
+#               run: |
+#                   python -c "from osgeo import gdal"
+#                   gdalinfo --version
+#             - name: Install dependencies
+#               run: |
+#                   pip install --no-cache-dir Cython
+#                   pip install -r requirements.txt -r requirements_dev.txt
+#                   pip install .
+#             - name: Discover typos with codespell
+#               run: codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,*.pdf,./.git" --ignore-words-list="aci,acount,hist"
+#             - name: PKG-TEST
+#               run: |
+#                   python -m unittest discover tests/
+#             - name: Build docs
+#               run: |
+#                   mkdocs build
             # - name: Deploy to Netlify
             #   uses: nwtgck/actions-netlify@v2.0
             #   with:
