--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,25 +11,30 @@ jobs:
 
         steps:
         - name: Checkout code
-          uses: actions/checkout@v2
+          uses: actions/checkout@v4
 
         - name: Set up Python
-          run: |
-            brew install python@3.10
-            python3 -m venv env
-            source env/bin/activate
+          uses: actions/setup-python@v5
+          with:
+            python-version: '3.10'
 
-
-        - name: Run style checks
+        - name: Install MLX
           run: |
-            pip install pre-commit
+            pip install mlx>=0.15
+
+        - name: Install pre-commit
+          run: |
+            python -m pip install pre-commit
             pre-commit run --all
-            if ! git diff --quiet; then echo 'Style checks failed, please install pre-commit and run pre-commit run --all and push the change'; exit 1; fi
+            if ! git diff --quiet; then
+              echo 'Style checks failed, please install pre-commit and run pre-commit run --all and push the change'
+              exit 1
+            fi
 
-        - name: Install dependencies
+        - name: Install package and dependencies
           run: |
-            pip install pytest
-            pip install -e .
+            python -m pip install pytest
+            python -m pip install -e .
 
         - name: Run Python tests
           run: |
