--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,4 +39,4 @@ jobs:
         - name: Run Python tests
           run: |
             cd mlx_embeddings/
-            pytest -s ./tests
+            pytest -s ./tests --ignore=tests/test_smoke.py
