feat: add q_mode quantization support matching mlx-lm
Add --q-mode CLI flag to convert.py with choices: affine, mxfp4, nvfp4, mxfp8.
Each mode has correct default group_size and bits matching mlx-lm behavior.

Changes:
- convert.py: --q-mode argument with affine default
- utils.py: mode param in quantize_model() with defaults_for_mode() helper
- tests/test_convert.py: 15 tests covering CLI args, mode defaults, passthrough
- README.md: Model Conversion docs with modes table and examples
- pyproject.toml: exclude test_smoke.py from pytest, add dev deps group

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ extra = [
     "pandas",
 ]
 
+dev = [
+    "pytest",
+    "psutil",
+    "rich",
+]
 
 [tool]
 [tool.setuptools.packages.find]
@@ -66,6 +71,10 @@ filename = "mlx_embeddings/version.py"
 search = '__version__ = "{current_version}"'
 replace = '__version__ = "{new_version}"'
 
+
+[tool.pytest.ini_options]
+# test_smoke.py is a CLI integration script, not a pytest module
+addopts = "--ignore=mlx_embeddings/tests/test_smoke.py"
 
 [tool.flake8]
 exclude = [
