--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 mlx>=0.16.3
 mlx-vlm>=0.1.21
-transformers[sentencepiece]>=4.44.0
+transformers[sentencepiece]>=5.0.0rc3,<6.0.0
 huggingface-hub>=0.25.1
